<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="error_message">We count more than 25 errors. If that happened in few minutes, try to change server in preferences!</string>
    <string name="ad_message">You can disable advertisement in settings!</string>
    <string name="server_default_value">https://raw.githubusercontent.com/RomzesRover/HSPAPlusTweakerN/master/hspap_files/</string>
    <string name="title_dialog">Love this app?</string>
    <string name="dont_show_again">Don\'t show again</string>
    <string name="review">Review on Google Play!</string>
    <string name="review_summary">You will make an invaluable contribution to the development of the project!</string>
    
    <string name="share">Share this app</string>
    <string name="share_summary">You can tell your friends and relatives how this app is helping you.</string>
    <string name="share_text">I recommend this application for stabilizing mobile H+ connection.</string>
    
    <string name="buy">Buy the AD disabler</string>
    <string name="buy_summary">You will support the developer, and You will enjoy with interface without advertisement.</string>
     

    <string name="app_name">HSPA+ Tweaker</string>
    <string name="errors">Errors</string>
    <string name="action_settings">Settings</string>
    <string name="fileSize">File size to download</string>
    <string name="downloadInterval">Interval to download</string>
    <string name="downloadSource">Source to download</string>
    <string name="main">Base</string>
    <string name="ui">User Interface</string>
    <string name="ad">Advertisement</string>
    <string name="fileSizeSummary">Which file by size you want to download</string>
    <string name="downloadIntervalSummary">Which interval to download files by msec</string>
    <string name="downloadSourceSummary">Which source to download files by server</string>
    <string name="itstimetochoose">Choose File size</string>
    <string name="itstimetochooseDS">Choose source server</string>
    <string name="itstimetochooseDI">Choose download interval</string>
    <string name="showLogs">Show log</string>
    <string name="showLogsSummary">Will show last 500 lines of logs</string>
    <string name="stopOnError">Stop on error</string>
    <string name="stopOnErrorSummary">Stop if an error occurred</string>
    <string name="showRedOnError">Draw window red when error occurred</string>
    <string name="showRedOnErrorSummary">When an error occurred window become red</string>
    <string name="showPendingNotification">Show notification when service is running</string>
    <string name="showPendingNotificationSummary">uncancelable pending notification in drawer</string>
    <string name="startOnWiFiAPEnabling">Autostart with wifi hotspot</string>
    <string name="startOnWiFiAPEnablingSummary">service will start when wifi hotspot turns on</string>
    <string name="buyAd">Turn off Ad</string>
    <string name="buyedAd">Ad successfully disabled!</string>
    <string name="serviceRunning">Service is running!</string>
    <string name="defaultDownloadInterval">1000</string>
    <string name="defaultFileSize">1</string>
    <string name="defaultLogMessageSuccess">Successfully!</string>
    <string name="defaultLogMessageError">Error Occurred!</string>
    <string name="defaultLogMessageStopping">Stopping service</string>
    <string name="defaultLogMessageByte">byte</string>

    <string-array name="files_sizes_entries">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="files_sizes">
        <item>1 byte</item>
        <item>2 bytes</item>
        <item>3 bytes</item>
        <item>4 bytes</item>
        <item>5 bytes</item>
        <item>6 bytes</item>
        <item>7 bytes</item>
        <item>8 bytes</item>
        <item>9 bytes</item>
        <item>10 bytes</item>
    </string-array>
    <string-array name="download_interval_entries">
        <item>400</item>
        <item>500</item>
        <item>600</item>
        <item>700</item>
        <item>800</item>
        <item>900</item>
        <item>1000</item>
        <item>1500</item>
        <item>2000</item>
        <item>2500</item>
        <item>3000</item>
        <item>3500</item>
        <item>4000</item>
        <item>4500</item>
        <item>5000</item>
    </string-array>
    <string-array name="download_interval">
        <item>400 msec</item>
        <item>500 msec</item>
        <item>600 msec</item>
        <item>700 msec</item>
        <item>800 msec</item>
        <item>900 msec</item>
        <item>1 sec</item>
        <item>1 sec and 500 msec</item>
        <item>2 sec</item>
        <item>2 sec and 500 msec</item>
        <item>3 sec</item>
        <item>3 sec and 500 msec</item>
        <item>4 sec</item>
        <item>4 sec and 500 msec</item>
        <item>5 sec</item>
    </string-array>
    <string-array name="download_source_entries">
        <item>http://brothers-rowers.3dn.ru/HSPAP/hspap_files/</item>
        <item>https://raw.githubusercontent.com/RomzesRover/HSPAPlusTweakerN/master/hspap_files/</item>
    </string-array>
    <string-array name="download_source">
        <item>brothers-rowers.3dn.ru</item>
        <item>github.com</item>
    </string-array>

</resources>