<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/main" >
        <ListPreference
            android:defaultValue="1"
            android:dialogTitle="@string/itstimetochoose"
            android:entries="@array/files_sizes"
            android:entryValues="@array/files_sizes_entries"
            android:key="fileSize"
            android:summary="@string/fileSizeSummary"
            android:title="@string/fileSize" >
        </ListPreference>
        <ListPreference
            android:defaultValue="1000"
            android:dialogTitle="@string/itstimetochooseDI"
            android:enabled="true"
            android:entries="@array/download_interval"
            android:entryValues="@array/download_interval_entries"
            android:key="downloadItnerval"
            android:summary="@string/downloadIntervalSummary"
            android:title="@string/downloadInterval" >
        </ListPreference>
    </PreferenceCategory>

</PreferenceScreen>